[metadata]
name = twspace-dl
version = 2022.1.16.0
description = The only tool to record Twitter spaces (yet)
url = https://github.com/OdielDomanie/twspace-dl
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.8
install_requires =
    requests >= 2.26.0

[options.packages.find]
where = twspace_dl
